--- a/frontend/src/components/header/index.less
+++ b/frontend/src/components/header/index.less
@@ -1,3 +1,9 @@
 .header{
   color: #eee;
+  display: flex;
+  justify-content: space-between;
+  .userName{
+    font-size: 18px;
+    font-weight: 400;
+  }
 }
