feat:  load echartjs in cdn

--- a/frontend/src/pages/home/index.less
+++ b/frontend/src/pages/home/index.less
@@ -28,7 +28,7 @@
 
 
 .chartPlaceholder{
-  height: @tableOperationHeight + 40px;
+  height: @tableOperationHeight;
 }
 .chartCloseWrapper{
   position: relative;
